add image to meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,25 @@
   <meta charset="utf-8">
   <!-- Primary Meta Tags -->
     <title>Tide tweets stream - a Server Send Events example with Tide</title>
-    <meta name="title" content="Tide tweets stream - a Server Send Events example with Tide">
-    <meta name="description" content="Tide tweets stream - a Server Send Events example in Rust using Tide ( @http_rs )">
+    <meta name="title" content="Tide ws roomms - a websocket example with Tide exploring rooms">
+    <meta name="description" content="Tide ws roomms - a websocket example with Tide exploring rooms">
     <meta name="author" content="Javier Viola">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tide-sse-tweets.labs.javierviola.com/">
-    <meta property="og:title" content="Tide sse tweets - a SSE example with Tide">
-    <meta property="og:description" content="Tide sse tweets - a SSE example with Tide">
-    <meta property="og:image" content="https://user-images.githubusercontent.com/363911/107263816-fa8d6400-6a20-11eb-8d2f-6ee13d3669d0.png">
+    <meta property="og:url" content="https://tide-ws-rooms.labs.javierviola.com/">
+    <meta property="og:title" content="Tide ws roomms - a websocket example with Tide exploring rooms">
+    <meta property="og:description" content="Tide ws roomms - a websocket example with Tide exploring rooms">
+    <meta property="og:image" content="https://user-images.githubusercontent.com/363911/111041958-998aee80-8419-11eb-87ee-533e2aff3a27.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://tide-sse-tweets.labs.javierviola.com/">
-    <meta property="twitter:title" content="Tide sse tweets - a SSE example with Tide">
-    <meta property="twitter:description" content="Tide sse tweets - a SSE example with Tide">
-    <meta property="twitter:image" content="https://user-images.githubusercontent.com/363911/107263816-fa8d6400-6a20-11eb-8d2f-6ee13d3669d0.png">
+    <meta property="twitter:url" content="https://tide-tw-rooms.labs.javierviola.com/">
+    <meta property="twitter:title" content="Tide ws roomms - a websocket example with Tide exploring rooms">
+    <meta property="twitter:description" content="Tide ws roomms - a websocket example with Tide exploring rooms">
+    <meta property="twitter:image" content="https://user-images.githubusercontent.com/363911/111041958-998aee80-8419-11eb-87ee-533e2aff3a27.png">
 
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/normalize.css">
