--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <title>Tide tweets stream</title>
+  <title>Tide tweets rooms</title>
   <meta charset="utf-8">
   <!-- Primary Meta Tags -->
-    <title>Tide tweets stream - a Server Send Events example with Tide</title>
+    <title>Tide tweets rooms - a websocket example with Tide exploring rooms</title>
     <meta name="title" content="Tide ws roomms - a websocket example with Tide exploring rooms">
     <meta name="description" content="Tide ws roomms - a websocket example with Tide exploring rooms">
     <meta name="author" content="Javier Viola">
@@ -111,7 +111,7 @@ button.game--start {
           <li class="navbar-item"><a class="navbar-link" href="/">Home</a></li>
           <li class="navbar-item"><a class="navbar-link" href="https://labs.javierviola.com">Labs</a></li>
           <li class="navbar-item">
-            <a class="navbar-link" href="https://github.com/pepoviola/tide-sse-tweets" target="_blank">GH Repo</a>
+            <a class="navbar-link" href="https://github.com/pepoviola/tide-tw-rooms" target="_blank">GH Repo</a>
           </li>
 
         </ul>
